add solver (see test) for general groups

--- a/notebooks/read-santa.ipynb
+++ b/notebooks/read-santa.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e153d625",
+   "id": "266bd9e5",
    "metadata": {},
    "source": [
     "## Save generators"
@@ -105,12 +105,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "68696dd0",
+   "execution_count": 26,
+   "id": "d587cdc5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-08T15:04:03.499473Z",
-     "start_time": "2025-04-08T15:04:01.614073Z"
+     "end_time": "2025-04-08T15:27:13.549994Z",
+     "start_time": "2025-04-08T15:27:10.504615Z"
     },
     "scrolled": false
    },
@@ -119,39 +119,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p   | puzzle           | #actions | # santa states   | # unique elements |\n",
-      "000 | cube_2/2/2       |  12      | [20, 5, 5]       | [6, 24, 6]        |\n",
-      "001 | cube_3/3/3       |  18      | [82, 10, 7]      | [6, 6, 54]        |\n",
-      "002 | cube_4/4/4       |  24      | [43, 4, 3]       | [6, 6, 96]        |\n",
-      "003 | cube_5/5/5       |  30      | [19, 5, 3]       | [6, 6, 150]       |\n",
-      "004 | cube_6/6/6       |  36      | [6, 1]           | [6, 6]            |\n",
-      "005 | cube_7/7/7       |  42      | [4]              | [6]               |\n",
-      "006 | cube_8/8/8       |  48      | [3]              | [6]               |\n",
-      "007 | cube_9/9/9       |  54      | [3]              | [6]               |\n",
-      "008 | cube_10/10/10    |  60      | [4]              | [6]               |\n",
-      "009 | cube_19/19/19    | 114      | [3]              | [6]               |\n",
-      "010 | cube_33/33/33    | 198      | [1, 1, 1]        | [6, 6, 6534]      |\n",
-      "011 | wreath_6/6       |   4      | [15]             | [3]               |\n",
-      "012 | wreath_7/7       |   4      | [13]             | [3]               |\n",
-      "013 | wreath_12/12     |   4      | [7]              | [3]               |\n",
-      "014 | wreath_21/21     |   4      | [5]              | [3]               |\n",
-      "015 | wreath_33/33     |   4      | [2]              | [3]               |\n",
-      "016 | wreath_100/100   |   4      | []               | []                |\n",
-      "017 | globe_1/8        |  36      | [5, 4]           | [16, 32]          |\n",
-      "018 | globe_1/16       |  68      | [3]              | [16]              |\n",
-      "019 | globe_2/6        |  30      | [3]              | [12]              |\n",
-      "020 | globe_3/4        |  24      | [7, 3]           | [8, 32]           |\n",
-      "021 | globe_6/4        |  30      | [4]              | [12]              |\n",
-      "022 | globe_6/8        |  46      | [4]              | [24]              |\n",
-      "023 | globe_6/10       |  54      | [1]              | [15]              |\n",
-      "024 | globe_3/33       | 140      | [5, 2]           | [22, 264]         |\n",
-      "025 | globe_8/25       | 118      | [2]              | [30]              |\n"
+      "p   | puzzle           | #actions | # santa states   | # unique elements | # elements |\n",
+      "000 | cube_2/2/2       |  12      | [20, 5, 5]       | [6, 24, 6]        |   24       |\n",
+      "001 | cube_3/3/3       |  18      | [82, 10, 7]      | [6, 6, 54]        |   54       |\n",
+      "002 | cube_4/4/4       |  24      | [43, 4, 3]       | [6, 6, 96]        |   96       |\n",
+      "003 | cube_5/5/5       |  30      | [19, 5, 3]       | [6, 6, 150]       |  150       |\n",
+      "004 | cube_6/6/6       |  36      | [6, 1]           | [6, 6]            |  216       |\n",
+      "005 | cube_7/7/7       |  42      | [4]              | [6]               |  294       |\n",
+      "006 | cube_8/8/8       |  48      | [3]              | [6]               |  384       |\n",
+      "007 | cube_9/9/9       |  54      | [3]              | [6]               |  486       |\n",
+      "008 | cube_10/10/10    |  60      | [4]              | [6]               |  600       |\n",
+      "009 | cube_19/19/19    | 114      | [3]              | [6]               | 2166       |\n",
+      "010 | cube_33/33/33    | 198      | [1, 1, 1]        | [6, 6, 6534]      | 6534       |\n",
+      "011 | wreath_6/6       |   4      | [15]             | [3]               |   10       |\n",
+      "012 | wreath_7/7       |   4      | [13]             | [3]               |   12       |\n",
+      "013 | wreath_12/12     |   4      | [7]              | [3]               |   22       |\n",
+      "014 | wreath_21/21     |   4      | [5]              | [3]               |   40       |\n",
+      "015 | wreath_33/33     |   4      | [2]              | [3]               |   64       |\n",
+      "017 | globe_1/8        |  36      | [5, 4]           | [16, 32]          |   32       |\n",
+      "018 | globe_1/16       |  68      | [3]              | [16]              |   64       |\n",
+      "019 | globe_2/6        |  30      | [3]              | [12]              |   36       |\n",
+      "020 | globe_3/4        |  24      | [7, 3]           | [8, 32]           |   32       |\n",
+      "021 | globe_6/4        |  30      | [4]              | [12]              |   56       |\n",
+      "022 | globe_6/8        |  46      | [4]              | [24]              |  112       |\n",
+      "023 | globe_6/10       |  54      | [1]              | [15]              |  140       |\n",
+      "024 | globe_3/33       | 140      | [5, 2]           | [22, 264]         |  264       |\n",
+      "025 | globe_8/25       | 118      | [2]              | [30]              |  450       |\n"
      ]
     }
    ],
    "source": [
-    "print(f\"p   | {'puzzle':16s} | #actions | # santa states   | # unique elements |\")\n",
+    "print(f\"p   | {'puzzle':16s} | #actions | # santa states   | # unique elements | # elements |\")\n",
     "for j in range(puzzle_info.shape[0]):\n",
+    "# for j in [1]:\n",
     "    allowed_moves = eval(puzzle_info.iloc[j].allowed_moves)\n",
     "    actions = [v for (k, v) in allowed_moves.items()]\n",
     "    names = [k for (k, v) in allowed_moves.items()]\n",
@@ -169,12 +169,13 @@
     "    with open(f'../generators/p{j:03d}.json', 'w') as f:\n",
     "        json.dump(generators, f)\n",
     "    \n",
-    "    print(f\"{j:03d} | {puzzle_info.iloc[j].puzzle_type:16s} | {len(actions):3d}      | {str(puzzles[puzzles.puzzle_type == puzzle].solution_state.value_counts().to_list()):16s} | {str([np.unique(s.split(';')).shape[0] for s in solution_states]):17s} |\")"
+    "    if puzzle in puzzles_list:\n",
+    "        print(f\"{j:03d} | {puzzle_info.iloc[j].puzzle_type:16s} | {len(actions):3d}      | {str(puzzles[puzzles.puzzle_type == puzzle].solution_state.value_counts().to_list()):16s} | {str([np.unique(s.split(';')).shape[0] for s in solution_states]):17s} | {len(solution_states[0].split(';')):4d}       |\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d0343c02",
+   "id": "89b8cbdc",
    "metadata": {},
    "source": [
     "## Save datasets"
@@ -183,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5584b854",
+   "id": "bd22c2a4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-08T14:59:43.595698Z",
@@ -214,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0e92a290",
+   "id": "32f678a4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-08T15:00:49.377031Z",
@@ -282,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dae6991",
+   "id": "8c8ef3f9",
    "metadata": {},
    "outputs": [],
    "source": []
