--- a/notebooks/read-santa.ipynb
+++ b/notebooks/read-santa.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62e3e3f9",
+   "id": "3da5e6b2",
    "metadata": {},
    "source": [
     "## Save generators"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d0651db6",
+   "id": "4a1c74f5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-08T15:27:13.549994Z",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06f979f4",
+   "id": "f6a42471",
    "metadata": {},
    "source": [
     "## Save datasets"
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "07c18525",
+   "id": "92d7d7fe",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-09T09:35:51.052657Z",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bcb99518",
+   "id": "4fb1979c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-08T15:00:49.377031Z",
@@ -282,8 +282,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d38a252",
-   "metadata": {},
+   "id": "65d62ae0",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Estimate mixing time"
    ]
@@ -291,12 +293,13 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "1b733ab7",
+   "id": "7f8563c4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T21:27:23.720308Z",
      "start_time": "2025-04-10T21:27:23.709929Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -309,12 +312,13 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "22c98e3b",
+   "id": "655f832e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T21:27:25.643490Z",
      "start_time": "2025-04-10T21:27:25.635896Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -324,12 +328,13 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "id": "9ac650cf",
+   "id": "55a98857",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T21:35:37.965060Z",
      "start_time": "2025-04-10T21:35:37.949549Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -347,12 +352,13 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "c2a26b81",
+   "id": "cccfa21f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T21:35:43.290420Z",
      "start_time": "2025-04-10T21:35:43.279573Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -373,12 +379,13 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "id": "2ecfd430",
+   "id": "9c6336a4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T21:35:24.687989Z",
      "start_time": "2025-04-10T21:35:24.677064Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -399,12 +406,13 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "19999b4a",
+   "id": "4a33f9a6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T21:34:35.485205Z",
      "start_time": "2025-04-10T21:34:35.475952Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -415,12 +423,13 @@
   {
    "cell_type": "code",
    "execution_count": 234,
-   "id": "ef867f1e",
+   "id": "24057805",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T21:34:37.006607Z",
      "start_time": "2025-04-10T21:34:36.476090Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -443,12 +452,13 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "2390debe",
+   "id": "c1f70117",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T21:34:46.474865Z",
      "start_time": "2025-04-10T21:34:46.468125Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -460,12 +470,13 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "22c1db87",
+   "id": "d16f60f3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T21:34:56.472144Z",
      "start_time": "2025-04-10T21:34:56.116195Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -495,12 +506,13 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "d11e14f8",
+   "id": "2c91400a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-10T21:28:33.076482Z",
      "start_time": "2025-04-10T21:28:30.633197Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -532,12 +544,13 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "e70a2ab2",
+   "id": "ecbb7f29",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-09T09:58:36.166115Z",
      "start_time": "2025-04-09T09:58:33.693516Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -569,12 +582,13 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "beb8db5b",
+   "id": "09053668",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-09T09:52:15.436617Z",
      "start_time": "2025-04-09T09:52:14.288795Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -605,56 +619,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32acf61a",
-   "metadata": {},
+   "id": "9f09b474",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2bfb195",
-   "metadata": {},
+   "id": "b2f7b579",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eefc766",
-   "metadata": {},
+   "id": "cd67d731",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75d4dab9",
-   "metadata": {},
+   "id": "2619c658",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69b80a43",
-   "metadata": {},
+   "id": "1dde5a81",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec12e3d6",
-   "metadata": {},
+   "id": "12e10393",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f39e78d",
-   "metadata": {},
+   "id": "d3420068",
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
