--- a/notebooks/LRX.ipynb
+++ b/notebooks/LRX.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2ce90869",
+   "id": "6c3d451e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-11T08:15:17.210658Z",
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d6f53e03",
+   "id": "8f69c43a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-11T08:15:46.758669Z",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a5a9e3e",
+   "id": "40204448",
    "metadata": {},
    "source": [
     "## Save generators"
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "32424f06",
+   "id": "5b6f9263",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-11T08:15:48.104286Z",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a9be14de",
+   "id": "1f23a67e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-11T08:15:48.547895Z",
@@ -120,34 +120,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "7894ce9d",
+   "execution_count": 20,
+   "id": "2b83e3db",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-11T08:48:24.919255Z",
-     "start_time": "2025-04-11T08:48:24.911909Z"
+     "end_time": "2025-04-11T09:04:55.607360Z",
+     "start_time": "2025-04-11T09:04:55.600586Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "300.0"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300.0\n",
+      "25\n"
+     ]
     }
    ],
    "source": [
     "n = 25\n",
-    "n*(n-1)/2"
+    "print(n*(n-1)/2)\n",
+    "print(round(log10(factorial(n))))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "849a2bb6",
+   "id": "a5936d53",
    "metadata": {},
    "source": [
     "## Save datasets"
@@ -156,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cb86ea51",
+   "id": "b0a16f35",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-11T08:16:21.677532Z",
@@ -187,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b3c3c401",
+   "id": "cdae8cf9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-04-11T08:17:21.191414Z",
@@ -246,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d91c29da",
+   "id": "4d3cd1ea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -254,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "903dd768",
+   "id": "81fb2fe8",
    "metadata": {},
    "outputs": [],
    "source": []
